--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,54 @@
 name: Code-Suggester
+author: googleapis
 description: An action-wrapper for the npm cli code-suggester. It suggests code to your repository
+inputs:
+  command:
+    description: 'The command for code-suggester to run'
+    required: true
+  upstream_repo:
+    description: 'The repository to create the fork off of.'
+    required: true
+  upstream_owner:
+    description: 'The owner of the upstream repository.'
+    required: true
+  description:
+    description: 'The GitHub Pull Request description.'
+    required: true
+  title:
+    description: 'The GitHub Pull Request title.'
+    required: true
+  message:
+    description: 'The GitHub commit message.'
+    required: true
+  branch:
+    description: 'The GitHub working branch name.'
+    required: true
+  primary:
+    description: 'The primary upstream branch to open a PR against.'
+    default: master
+  force:
+    description: >-
+      Whether or not to force push a reference with different commit history
+      before the remote reference HEAD. Default is false
+    default: false
+  maintainers_can_modify:
+    description: 'Whether or not maintainers can modify the pull request.'
+    default: true
+  git_dir:
+    description: 'The path of a git directory'
+    default: ${GITHUB_WORKSPACE}
 runs:
   using: docker
   image: Dockerfile
+  args:
+    - ${{ inputs.command }}
+    - ${{ inputs.upstream_repo }}
+    - ${{ inputs.upstream_owner }}
+    - ${{ inputs.description }}
+    - ${{ inputs.title }}
+    - ${{ inputs.branch }}
+    - ${{ inputs.primary }}
+    - ${{ inputs.message }}
+    - ${{ inputs.force }}
+    - ${{ inputs.maintainers_can_modify }}
+    - ${{ inputs.git_dir }}
