--- a/action.yaml
+++ b/action.yaml
@@ -36,7 +36,7 @@ inputs:
     default: true
   git_dir:
     description: 'The path of a git directory'
-    default: ${GITHUB_WORKSPACE}
+    default: .
 runs:
   using: docker
   image: Dockerfile
